Use ProcessBuilder to start mplayer with DISPLAY environment variable